# vga-emu

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  justfile
.github/workflows/: rust.yml
.zed/: settings.json
examples/ball/: Cargo.toml  Makefile  index.html  justfile
examples/ball/pkg/: vgaball.d.ts  vgaball.js  vgaball_bg.wasm  vgaball_bg.wasm.d.ts
examples/ball/src/: lib.rs  main.rs  web.rs
examples/kite/: Cargo.toml  index.html
examples/kite/pkg/: vgakite.d.ts  vgakite.js  vgakite_bg.wasm  vgakite_bg.wasm.d.ts
examples/kite/src/: lib.rs  main.rs  web.rs
examples/m320x400/: Cargo.toml  index.html  justfile
examples/m320x400/pkg/: vgam320x400.d.ts  vgam320x400.js  vgam320x400_bg.wasm  vgam320x400_bg.wasm.d.ts
examples/m320x400/src/: lib.rs  main.rs  web.rs
examples/palette/: Cargo.toml  index.html  justfile
examples/palette/pkg/: package.json  vgapalette.d.ts  vgapalette.js  vgapalette_bg.wasm  vgapalette_bg.wasm.d.ts
examples/palette/src/: lib.rs  main.rs  web.rs
examples/patternx/: Cargo.toml  index.html
examples/patternx/pkg/: vgapatternx.d.ts  vgapatternx.js  vgapatternx_bg.wasm  vgapatternx_bg.wasm.d.ts
examples/patternx/src/: lib.rs  main.rs  web.rs
examples/rectx/: Cargo.toml  index.html
examples/rectx/pkg/: vgarectx.d.ts  vgarectx.js  vgarectx_bg.wasm  vgarectx_bg.wasm.d.ts
examples/rectx/src/: lib.rs  main.rs  web.rs
src/: backend.rs  backend_sdl.rs  backend_sdl2.rs  backend_test.rs  backend_web.rs  input.rs  lib.rs  lib_test.rs  screen.rs  util.rs
tests/: integration_sdl.rs  lib.rs
