[package]
name = "vga-emu"
version = "0.7.3"
edition = "2021"
authors = ["Michael Bohn <spaceodyssey@gmx.de>"]
description = "VGA Emulator"
license = "GPL-3.0"
repository = "https://github.com/Ragnaroek/vga-emu"

[lib]
name = "vga"
crate-type = ["cdylib", "rlib"]

[features]
sdl = ["dep:sdl2"]
web = [
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "dep:js-sys",
]
tracing = ["dep:tracing"]

[dependencies]
tokio = { version = "1.43.0", features = ["time"] }
# feature "sdl"
sdl2 = { version = "0.37.0", optional = true, default-features = false, features = [
    "ttf",
] }
# feature "web"
wasm-bindgen = { version = "0.2.99", optional = true }
wasm-bindgen-futures = { version = "0.4.49", optional = true }
js-sys = { version = "0.3.76", optional = true }
web-sys = { version = "0.3.76", optional = true, features = [
    'Document',
    'Window',
    'CanvasRenderingContext2d',
    'HtmlCanvasElement',
    'ImageData',
    'KeyboardEvent',
    'console',
] }
# feature tracing
tracing = { version = "0.1.41", optional = true, default-features = false, features = [
    "attributes",
] }

[[bin]]
name = "kite"
path = "src/bin/kite.rs"

[[bin]]
name = "m320x400"
path = "src/bin/m320x400.rs"

[[bin]]
name = "patternx"
path = "src/bin/patternx.rs"

[[bin]]
name = "rectx"
path = "src/bin/rectx.rs"

[[bin]]
name = "palette"
path = "src/bin/palette.rs"
