[package]
name = "vga-emu"
version = "0.8.4"
edition = "2024"
authors = ["Michael Bohn <spaceodyssey@gmx.de>"]
description = "VGA Emulator"
license = "GPL-3.0"
repository = "https://github.com/Ragnaroek/vga-emu"

[lib]
name = "vga"
crate-type = ["cdylib", "rlib"]

[features]
sdl = [
    "dep:sdl3",
    "dep:tokio",
]
sdl2 = [
    "dep:sdl2",
    "dep:tokio"
]
web = [
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "dep:js-sys",
]
test = ["dep:tokio"]
tracing = ["dep:tracing"]

[dependencies]
# feature "sdl"
sdl3 = { version = "0.16.2", optional = true, features = ["unsafe_textures"] }
tokio = { version = "1.48.0", optional = true, features = ["time", "rt"] }

#feature "sdl2"
sdl2 = { version = "0.38.0", optional = true, default-features = false, features = ["unsafe_textures"]}

# feature "web"
wasm-bindgen = { version = "0.2.105", optional = true }
wasm-bindgen-futures = { version = "0.4.55", optional = true }
js-sys = { version = "0.3.82", optional = true }
web-sys = { version = "0.3.82", optional = true, features = [
    'Document',
    'Window',
    'CanvasRenderingContext2d',
    'HtmlCanvasElement',
    'ImageData',
    'KeyboardEvent',
    'console',
] }

# feature tracing
tracing = { version = "0.1.41", optional = true, default-features = false, features = [
    "attributes",
] }
