[package]
name = "vga-ball"
version = "0.1.0"
edition = "2021"
authors = ["Michael Bohn <spaceodyssey@gmx.de>"]
description = "VGA Ball Example"
license = "GPL-3.0"
repository = "https://github.com/Ragnaroek/vga-emu/examples/ball"

[lib]
name = "vgaball"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ball"
path = "src/main.rs"

[features]
web = [
    "vga-emu/web",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:console_error_panic_hook",
    "dep:web-sys",
    "dep:js-sys",
]
sdl = [
    "vga-emu/sdl",
    "dep:tokio",
]

[dependencies]
vga-emu = { path = "../../" }

# feature sdl
tokio = { version = "1.47.1", optional = true, features = ["time", "rt"] }

# feature web
wasm-bindgen = { version = "0.2.101", optional = true }
wasm-bindgen-futures = { version = "0.4.53", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.78", optional = true, features = ['console'] }
js-sys = { version = "0.3.77", optional = true}
