[package]
name = "vga-ball"
version = "0.1.0"
edition = "2021"
authors = ["Michael Bohn <spaceodyssey@gmx.de>"]
description = "VGA Ball Example"
license = "GPL-3.0"
repository = "https://github.com/Ragnaroek/vga-emu/examples/ball"

[lib]
name = "vgaball"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ball"
path = "src/main.rs"

[features]
sdl = ["vga-emu/sdl"]
web = [
    "vga-emu/web",
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook",
    "dep:web-sys",
]

[dependencies]
vga-emu = { path = "../../" }
async-std = { version = "1.13.0", features = ["unstable"] }
# feature web
wasm-bindgen = { version = "0.2.99", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.76", optional = true, features = ['console'] }
